--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -12,7 +12,7 @@
     "load-grunt-tasks": "0.4.0",
     "requirejs-angular-define": "git://github.com/camunda/requirejs-angular-define.git",
     "requirejs-text": "2.0.12",
-    "camunda-bpm-sdk-js": "7.3.0-SNAPSHOT",
+    "camunda-bpm-sdk-js": "git://github.com/camunda/camunda-bpm-sdk-js#master",
     "request": "2.53.0",
     "chai": "2.0.0",
     "chai-as-promised": "4.2.0",
