--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-requirejs": "0.4.4",
     "grunt-contrib-watch": "0.5.0",
+    "grunt-protractor-runner": "1.2.1",
     "load-grunt-tasks": "0.4.0",
     "requirejs-angular-define": "git://github.com/camunda/requirejs-angular-define.git",
     "requirejs-text": "2.0.12",
@@ -16,7 +17,6 @@
     "request": "2.53.0",
     "chai": "2.0.0",
     "chai-as-promised": "4.2.0",
-    "mocha": "2.1.0",
-    "protractor": "1.6.1"
+    "mocha": "2.1.0"
   }
 }
