--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -220,6 +220,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.10</version>
         <executions>
           <execution>
             <id>unpack</id>
@@ -478,6 +479,12 @@
       <build>
         <plugins>
           <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <skipTests>true</skipTests>
+            </configuration>
+          </plugin>
+          <plugin>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
             <version>8.1.14.v20131031</version>
@@ -496,7 +503,30 @@
                   <contextPath>/engine-rest</contextPath>
                 </contextHandler>
               </contextHandlers>
+              <stopKey>STOP</stopKey>
+              <stopPort>9999</stopPort>
+              <stopWait>10</stopWait>
             </configuration>
+            <executions>
+              <execution>
+                <id>start-jetty</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <scanIntervalSeconds>0</scanIntervalSeconds>
+                  <daemon>true</daemon>
+                </configuration>
+              </execution>
+              <execution>
+                <id>stop-jetty</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>stop</goal>
+                </goals>
+              </execution>
+            </executions>
             <dependencies>
               <dependency>
                 <groupId>org.camunda.bpm</groupId>
@@ -526,6 +556,33 @@
             </dependencies>
           </plugin>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>grunt-test</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <inherited>false</inherited>
+                <configuration>
+                  <target>
+                    <exec executable="npm" failonerror="true">
+                      <arg value="install" />
+                    </exec>
+                    <exec executable="./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager" failonerror="true">
+                      <arg value="update" />
+                    </exec>
+                    <exec executable="grunt" failonerror="true">
+                      <arg value="test-e2e" />
+                    </exec>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>build-helper-maven-plugin</artifactId>
             <executions>
@@ -552,37 +609,37 @@
                     </resource>
                   </resources>
                 </configuration>
-              </execution>              
+              </execution>
             </executions>
           </plugin>
           <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
-        <executions>
-          <execution>
-            <id>copy</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.camunda.bpm</groupId>
-                  <artifactId>camunda-engine-rest</artifactId>
-                  <version>${project.version}</version>
-                  <type>war</type>
-                  <classifier>tomcat</classifier>
-                  <overWrite>true</overWrite>
-                  <outputDirectory>${project.build.directory}/</outputDirectory>
-                  <destFileName>engine-rest.war</destFileName>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.10</version>
+            <executions>
+              <execution>
+                <id>copy</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.camunda.bpm</groupId>
+                      <artifactId>camunda-engine-rest</artifactId>
+                      <version>${project.version}</version>
+                      <type>war</type>
+                      <classifier>tomcat</classifier>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${project.build.directory}/</outputDirectory>
+                      <destFileName>engine-rest.war</destFileName>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
       <properties>
