chore(webapp/pom): add dependencies to test-e2e profile
related to #CAM-3421

--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -475,6 +475,31 @@
           <artifactId>tomcat-juli</artifactId>
           <version>7.0.33</version>
         </dependency>
+        <dependency>
+          <groupId>org.camunda.bpm</groupId>
+          <artifactId>camunda-engine</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.camunda.bpm.identity</groupId>
+          <artifactId>camunda-identity-ldap</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-jdk14</artifactId>
+          <version>1.7.7</version>
+        </dependency>
+        <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+          <version>1.4.181</version>
+        </dependency>
+        <dependency>
+          <groupId>com.fasterxml.uuid</groupId>
+          <artifactId>java-uuid-generator</artifactId>
+          <version>3.1.2</version>
+        </dependency>
       </dependencies>
       <build>
         <plugins>
