fix(test-e2e): allow async test setup using promises

--- a/client/webapp/src/test/js/e2e/.jshintrc
+++ b/client/webapp/src/test/js/e2e/.jshintrc
@@ -2,6 +2,7 @@
   "globals": {
     "define": false,
     "browser": false,
+    "protractor": false,
     "element": false,
     "by": false,
     "describe": false,
