--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -475,6 +475,12 @@
           <artifactId>tomcat-juli</artifactId>
           <version>7.0.33</version>
         </dependency>
+        <dependency>
+          <groupId>org.camunda.bpm.identity</groupId>
+          <artifactId>camunda-identity-ldap</artifactId>
+          <version>${project.version}</version>
+          <scope>test</scope>
+        </dependency>
       </dependencies>
       <build>
         <plugins>
