chore(test-e2e): configure xunit reporter for test-e2e
related to #CAM-3421

--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -17,6 +17,7 @@
     "request": "2.53.0",
     "chai": "2.0.0",
     "chai-as-promised": "4.2.0",
-    "mocha": "2.1.0"
+    "mocha": "2.1.0",
+    "xunit-file": "0.0.6"
   }
 }
