--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -574,15 +574,36 @@
                 <inherited>false</inherited>
                 <configuration>
                   <target>
-                    <exec executable="npm" failonerror="true">
+                    <!-- npm install -->
+                    <exec executable="npm" failonerror="true" osfamily="unix">
                       <arg value="install" />
                     </exec>
-                    <exec executable="./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager" failonerror="true">
+                    <exec executable="cmd" failonerror="true" osfamily="windows">
+                      <arg value="/c" />
+                      <arg value="npm" />
+                      <arg value="install" />
+                    </exec>
+                    <!-- update webdriver -->
+                    <exec executable="./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager" failonerror="true" osfamily="unix">
                       <arg value="update" />
                     </exec>
-                    <exec executable="grunt" failonerror="true">
+                    <exec executable="cmd" failonerror="true" osfamily="windows">
+                      <arg value="/c" />
+                      <arg value="./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager" />
+                      <arg value="update" />
+                    </exec>
+                    <!-- grunt test-e2e -->
+                    <exec executable="./node_modules/grunt-cli/bin/grunt" failonerror="unix">
                       <env key="XUNIT_FILE" value="target/xunit.xml" />
                       <env key="LOG_XUNIT" value="true" />
+                      <arg value="test-e2e" />
+                      <arg value="--color=false" />
+                    </exec>
+                    <exec executable="cmd" failonerror="true" osfamily="windows">
+                      <env key="XUNIT_FILE" value="target/xunit.xml" />
+                      <env key="LOG_XUNIT" value="true" />
+                      <arg value="/c" />
+                      <arg value="node_modules\.bin\grunt.cmd" />
                       <arg value="test-e2e" />
                       <arg value="--color=false" />
                     </exec>
