--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -574,26 +574,17 @@
                 <inherited>false</inherited>
                 <configuration>
                   <target>
-                    <!-- npm install -->
-                    <exec executable="npm" failonerror="true" osfamily="unix">
-                      <arg value="install" />
-                    </exec>
-                    <exec executable="cmd" failonerror="true" osfamily="windows">
-                      <arg value="/c" />
-                      <arg value="npm" />
-                      <arg value="install" />
-                    </exec>
                     <!-- update webdriver -->
                     <exec executable="./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager" failonerror="true" osfamily="unix">
                       <arg value="update" />
                     </exec>
                     <exec executable="cmd" failonerror="true" osfamily="windows">
                       <arg value="/c" />
-                      <arg value="./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager" />
+                      <arg value="node_modules\grunt-protractor-runner\node_modules\.bin\webdriver-manager" />
                       <arg value="update" />
                     </exec>
                     <!-- grunt test-e2e -->
-                    <exec executable="./node_modules/grunt-cli/bin/grunt" failonerror="unix">
+                    <exec executable="./node_modules/grunt-cli/bin/grunt" failonerror="true" osfamily="unix">
                       <env key="XUNIT_FILE" value="target/xunit.xml" />
                       <env key="LOG_XUNIT" value="true" />
                       <arg value="test-e2e" />
