--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -458,6 +458,140 @@
     </profile>
 
     <profile>
+      <id>dev-e2e</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.resteasy</groupId>
+          <artifactId>resteasy-jaxrs</artifactId>
+          <scope>runtime</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.tomcat</groupId>
+          <artifactId>tomcat-jdbc</artifactId>
+          <version>7.0.33</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.tomcat</groupId>
+          <artifactId>tomcat-juli</artifactId>
+          <version>7.0.33</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>8.1.14.v20131031</version>
+            <configuration>
+              <webAppConfig>
+                <contextPath>/camunda</contextPath>
+                <defaultsDescriptor>${project.basedir}/src/main/runtime/test/jetty/webdefault.xml</defaultsDescriptor>
+                <resourceBases>
+                  <resourceBase>${project.basedir}/target/webapp</resourceBase>
+                  <resourceBase>${project.basedir}/src/main/webapp</resourceBase>
+                </resourceBases>
+              </webAppConfig>
+              <contextHandlers>
+                <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+                  <war>${basedir}/target/engine-rest.war</war>
+                  <contextPath>/engine-rest</contextPath>
+                </contextHandler>
+              </contextHandlers>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.camunda.bpm</groupId>
+                <artifactId>camunda-engine</artifactId>
+                <version>${project.version}</version>
+              </dependency>
+              <dependency>
+                <groupId>org.camunda.bpm.identity</groupId>
+                <artifactId>camunda-identity-ldap</artifactId>
+                <version>${project.version}</version>
+              </dependency>
+              <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-jdk14</artifactId>
+                <version>1.7.7</version>
+              </dependency>
+              <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.4.181</version>
+              </dependency>
+              <dependency>
+                <groupId>com.fasterxml.uuid</groupId>
+                <artifactId>java-uuid-generator</artifactId>
+                <version>3.1.2</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>add-sources</id>
+                <goals>
+                  <goal>add-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>src/main/runtime/test/java</source>
+                  </sources>
+                </configuration>
+              </execution>
+              <execution>
+                <id>add-resources</id>
+                <goals>
+                  <goal>add-resource</goal>
+                </goals>
+                <configuration>
+                  <resources>
+                    <resource>
+                      <directory>src/main/runtime/test/resources</directory>
+                    </resource>
+                  </resources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.10</version>
+            <executions>
+              <execution>
+                <id>copy</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.camunda.bpm</groupId>
+                      <artifactId>camunda-engine-rest</artifactId>
+                      <version>${project.version}</version>
+                      <type>war</type>
+                      <classifier>tomcat</classifier>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${project.build.directory}/</outputDirectory>
+                      <destFileName>engine-rest.war</destFileName>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+      <properties>
+        <java.resources.override>src/main/runtime/test/resources</java.resources.override>
+      </properties>
+    </profile>
+
+    <profile>
       <id>test-e2e</id>
       <dependencies>
         <dependency>
@@ -498,10 +632,6 @@
               <webAppConfig>
                 <contextPath>/camunda</contextPath>
                 <defaultsDescriptor>${project.basedir}/src/main/runtime/test/jetty/webdefault.xml</defaultsDescriptor>
-                <resourceBases>
-                  <resourceBase>${project.basedir}/target/webapp</resourceBase>
-                  <resourceBase>${project.basedir}/src/main/webapp</resourceBase>
-                </resourceBases>
               </webAppConfig>
               <contextHandlers>
                 <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
@@ -518,7 +648,7 @@
                 <id>start-jetty</id>
                 <phase>pre-integration-test</phase>
                 <goals>
-                  <goal>run</goal>
+                  <goal>run-war</goal>
                 </goals>
                 <configuration>
                   <scanIntervalSeconds>0</scanIntervalSeconds>
