impr(jshint): update .jshintrc for e2e tests

--- a/client/webapp/src/test/js/e2e/.jshintrc
+++ b/client/webapp/src/test/js/e2e/.jshintrc
@@ -13,9 +13,12 @@
     "expect": false,
     "beforeEach": false,
     "afterEach": false,
+    "before": false,
+    "after": false,
     "runs": false,
     "waitsFor": false
   },
+  "expr": true,
   "node": true,
   "indent": 2,
   "strict": true
