chore(build): correct sdk dependencies builds

--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     "devTarget": "dist/app/admin"
   },
   "scripts": {
-    "win-build-sdk": "cd \"node_modules\\grunt-cli\\bin\" && grunt --gruntfile=..\\..\\camunda-commons-ui\\node_modules\\camunda-bpm-sdk-js\\Gruntfile.js browserify",
-    "build-sdk": "node_modules/grunt-cli/bin/grunt --gruntfile=node_modules/camunda-commons-ui/node_modules/camunda-bpm-sdk-js/Gruntfile.js browserify"
+    "win-build-sdk": "cd \"node_modules\\grunt-cli\\bin\" && grunt --gruntfile=..\\..\\camunda-commons-ui\\node_modules\\camunda-bpm-sdk-js\\Gruntfile.js browserify:distTypeUtils browserify:distAngular",
+    "build-sdk": "node_modules/grunt-cli/bin/grunt --gruntfile=node_modules/camunda-commons-ui/node_modules/camunda-bpm-sdk-js/Gruntfile.js browserify:distTypeUtils browserify:distAngular"
   },
   "dependencies": {
     "camunda-commons-ui": "camunda/camunda-commons-ui"
